--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@
     {
       "imports": {
         "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+        "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0",
         "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
         "react/": "https://aistudiocdn.com/react@^19.2.0/",
         "react": "https://aistudiocdn.com/react@^19.2.0",
-        "appwrite": "https://esm.sh/appwrite@14.0.1?target=esnext"
+        "appwrite": "https://esm.sh/appwrite@14.0.1?target=esnext",
+        "recharts": "https://esm.sh/recharts@2.12.2?external=react,react-dom"
       }
     }
     </script>
