--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
         "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
         "react/": "https://aistudiocdn.com/react@^19.2.0/",
         "react": "https://aistudiocdn.com/react@^19.2.0",
-        "appwrite": "https://esm.sh/appwrite@14.0.1?target=esnext",
-        "recharts": "https://esm.sh/recharts@2.12.2?external=react,react-dom"
+        "appwrite": "https://esm.sh/appwrite@14.0.1?target=esnext"
       }
     }
     </script>
